--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,12 @@
         "php": "^8.2",
         "doctrine/dbal": "^4.2",
         "filament/filament": "^3.2",
+        "filament/spatie-laravel-media-library-plugin": "^3.2",
         "inertiajs/inertia-laravel": "^1.0",
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "spatie/laravel-medialibrary": "^11.11",
         "spatie/laravel-permission": "^6.10",
         "tightenco/ziggy": "^2.0"
     },
