--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@stripe/react-stripe-js": "^3.1.1",
         "@stripe/stripe-js": "^5.4.0",
         "framer-motion": "^11.14.1",
-        "lucide-react": "^0.468.0"
+        "lucide-react": "^0.468.0",
+        "ziggy-js": "^2.4.1"
     }
 }
