--- a/herd.yml
+++ b/herd.yml
@@ -3,6 +3,9 @@ integrations:
     default:
       server-id: 874274
       site-id: 2580137
+    herd.hebertthomaslaw.com:
+      server-id: 874274
+      site-id: 2581051
     htl.com:
       server-id: 874274
       site-id: 2581002
